--- a/data/general/rules_general.yml
+++ b/data/general/rules_general.yml
@@ -7,7 +7,13 @@ rules:
   - intent: goodbye
   - action: utter_goodbye
 
+- rule: Say hello with moviequestion
+  steps:
+  - intent: greet
+  - action: utter_greet
+
 - rule: Say 'I am a bot' anytime the user challenges
   steps:
   - intent: bot_challenge
   - action: utter_iamabot
+
