--- a/data/general/nlu_general_greeting_chitchat.yml
+++ b/data/general/nlu_general_greeting_chitchat.yml
@@ -1,4 +1,4 @@
-version: "2.0"
+version: "3.1"
 
 nlu:
 - intent: greet
@@ -31,6 +31,8 @@ nlu:
     - see you around
     - bye bye
     - see you later
+    - tschüss
+    - bis dann
 
 - intent: bot_challenge
   examples: |
