--- a/data/general/rules_general.yml
+++ b/data/general/rules_general.yml
@@ -1,6 +1,11 @@
-version: "2.0"
+version: "3.1"
 
 rules:
+
+- rule: start
+  steps:
+  - intent: $start
+  - action: utter_greet
 
 - rule: Say goodbye anytime the user says goodbye
   steps:
@@ -17,3 +22,7 @@ rules:
   - intent: bot_challenge
   - action: utter_iamabot
 
+- rule: fallback
+  steps:
+  - intent: nlu_fallback 
+  - action: utter_fallback
