--- a/data/movietip/stories_movietip.yml
+++ b/data/movietip/stories_movietip.yml
@@ -1,33 +1,70 @@
-version: "2.0"
+version: "3.1"
 
 stories:
   - story: movietip_accept
     steps:
       - intent: movietip
+      - action: utter_slots_values  
       - action: utter_randommovie
       - intent: affirm
       - action: utter_movieaccepted
       - action: utter_goodbye
 
-  - story: movietip_deny
+  - story: randommovietip_affirm
     steps:
-      - intent: movietip
+      - intent: doesntmatter      
       - action: utter_randommovie
-      - intent: denymovietip
-      - action: utter_denied
-      - action: utter_askformovietaste
+      - intent: affirm
+      - action: utter_movieaccepted
+      - action: utter_goodbye
 
-  - story: movietip_deny
-    steps:
-      - intent: movietip
-      - action: utter_randommovie
-      - intent: deny
-      - action: utter_denied
-      - action: utter_askformovietaste
-      - intent: randommovietip
-      - action: utter_randommovie
 
-  - story: special movie
+  - story: randommovietip_deny
     steps:
-      - intent: specialmovietip
-      - action: utter_askformovietaste
+      - intent: doesntmatter      
+      - action: utter_randommovie
+      - or:
+        - intent: deny
+        - intent: denymovietip
+      - action: utter_denied
+      - action: moviefilter_form
+      - active_loop: moviefilter_form
+
+
+  # - story: randommovietip_deny
+  #   steps:
+  #     - intent: doesntmatter      
+  #     - action: utter_randommovie
+  #     - or:
+  #       - intent: deny
+  #       - intent: denymovietip
+  #     - action: utter_denied
+  #     - action: moviefilter_form
+  #     - active_loop: moviefilter_form   
+  #     - or:         
+  #       - intent: deny      
+  #       - intent: affirm
+  #     - action: utter_test
+  #     - action: moviefilter_form         
+
+
+  # - story: special movie
+  #   steps:
+  #     - intent: specialmovietip
+  #     - action: moviefilter_form
+  #     - active_loop: moviefilter_form
+  #     - action: utter_slots_values
+
+  # - story: movietip_deny
+  #   steps:
+  #     - intent: movietip
+  #     - action: utter_randommovie
+  #     - intent: deny
+  #     - action: utter_denied
+  #     - action: moviefilter_form
+  #     - active_loop: moviefilter_form
+  #     - active_loop: null
+  #     - slot_was_set:
+  #         - requested_slot: null
+  #     - action: utter_slots_values
+
