--- a/data/general/rules_general.yml
+++ b/data/general/rules_general.yml
@@ -21,8 +21,9 @@ rules:
   steps:
   - intent: bot_challenge
   - action: utter_iamabot
+  - action: utter_askforspecialmovietip
 
 - rule: fallback
-  steps:
-  - intent: nlu_fallback 
+  steps:  
+  - intent: nlu_fallback     
   - action: utter_fallback
