--- a/config.yml
+++ b/config.yml
@@ -23,7 +23,7 @@ pipeline:
     constrain_similarities: true
   - name: FallbackClassifier
     threshold: 0.7
-    ambiguity_threshold: 0.1    
+    ambiguity_threshold: 0.1
 
 # Configuration for Rasa Core.
 # https://rasa.com/docs/rasa/core/policies/
@@ -31,10 +31,10 @@ policies:
 # # No configuration for policies was provided. The following default policies were used to train your model.
 # # If you'd like to customize them, uncomment and adjust the policies.
 # # See https://rasa.com/docs/rasa/policies for more information.
-  - name: MemoizationPolicy  
-  # - name: UnexpecTEDIntentPolicy
-  #   max_history: 5
-  #   epochs: 100
+  - name: MemoizationPolicy
+    # - name: UnexpecTEDIntentPolicy
+    #   max_history: 5
+    #   epochs: 100
   - name: TEDPolicy
     max_history: 5
     epochs: 100
@@ -42,5 +42,6 @@ policies:
   - name: RulePolicy
     core_fallback_threshold: 0.6
     core_fallback_action_name: utter_fallback
-    enable_fallback_prediction: True    
+    enable_fallback_prediction: true
   #- name: debug.debug.DebugPolicy    
+assistant_id: 20230718-203129-wooden-broadcloth
