--- a/domain.yml
+++ b/domain.yml
@@ -1,91 +1,99 @@
-version: '3.0'
+version: "3.1"
 session_config:
   session_expiration_time: 60
   carry_over_slots_to_new_session: true
 intents:
-- $start
-- greet
-- goodbye
-- affirm
-- deny
-- bot_challenge
-- movietip
-- doesntmatter
-- specialmovietip
-- denymovietip
-- next
-- chitchat
+  - $start
+  - $start_search
+  - greet
+  - goodbye
+  - affirm
+  - deny
+  - bot_challenge
+  - movietip
+  - doesntmatter
+  - specialmovietip
+  - denymovietip
+  - next
+  - chitchat
+
 entities:
-- genre
-- rating
-- release
+  - genre
+  - rating
+  - release
+
 slots:
   genre:
     type: list
     influence_conversation: false
     mappings:
-    - type: from_entity
-      entity: genre
+      - type: from_entity
+        entity: genre
   release:
     type: text
     influence_conversation: false
     mappings:
-    - type: from_entity
-      entity: release
+      - type: from_entity
+        entity: release
   rating:
     type: text
     influence_conversation: false
     mappings:
-    - type: from_entity
-      entity: rating
+      - type: from_entity
+        entity: rating
 responses:
   utter_test:
-  - text: intent deny triggert in form
+    - text: intent deny triggert in form
   utter_greet:
-  - text: |
-      "Hi, Ich bin Movi der Filmbot und habe eine Menge Filme im Angebot.
-      Was für einen Film möchtest du sehen?"
+    - text: |
+        "Hi, Ich bin Movi der Filmbot und habe eine Menge Filme im Angebot.
+        Was für einen Film möchtest du sehen?"
   utter_goodbye:
-  - text: ', bis zum nächsten mal'
+    - text: ", bis zum nächsten mal"
   utter_iamabot:
-  - text: Ja ich bin ein Bot Namens Movi.
+    - text: Ja ich bin ein Bot Namens Movi.
   utter_fallback:
-  - text: Sorry ich bin mir nicht sicher was du sehen Willst. Welche Art Film interessiert dich denn?
+    - text: Sorry ich bin mir nicht sicher was du sehen Willst. Welche Art Film interessiert dich denn?
   utter_askforspecialmovietip:
-  - text: Du kannst mir auch bestimmte Genres nennen und mir sagen ob der film eher neuer oder älter sein soll.
+    - text: Du kannst mir auch bestimmte Genres nennen und mir sagen ob der film eher neuer oder älter sein soll.
   utter_denied:
-  - text: Ok ich habe noch mehr Filme im Angebot.
+    - text: Ok ich habe noch mehr Filme im Angebot.
   utter_randommovie:
-  - text: Ich kann dir Papa Ante Portas empfehlen.
-  - text: Ich empfehle dir den neuen Spiderman
-  - text: Die Hard soll gut sein
-  - text: Das Fenster zum Hof ist ein echter Klassiker
-  - text: Pulp Fiction muss man mal gesehen haben
+    - text: Ich kann dir Papa Ante Portas empfehlen.
+    - text: Ich empfehle dir den neuen Spiderman
+    - text: Die Hard soll gut sein
+    - text: Das Fenster zum Hof ist ein echter Klassiker
+    - text: Pulp Fiction muss man mal gesehen haben
   utter_movieaccepted:
-  - text: Ich wünsche gute Unterhaltung
+    - text: Ich wünsche gute Unterhaltung
   utter_moviebothelp:
-  - text: Was möchtest du sehen?
+    - text: Was möchtest du sehen?
   utter_askformovietaste:
-  - text: Welche Art von Film interessiert dich denn?
+    - text: Welche Art von Film interessiert dich denn?
   utter_slots_values:
-  - text: |
-      Ok mal sehen was ich hierfür im Angebot habe.
-      genre: {genre}
-      release: {release}
+    - text: |
+        Ok mal sehen was ich hierfür im Angebot habe.
+        genre: {genre}
+        release: {release}
   utter_ask_genre:
-  - text: Welche Genres soll der Film haben?
+    - text: Welche Genres soll der Film haben?
   utter_ask_rating:
-  - text: Wie hoch soll der Film Bewertet sein?
+    - text: Wie hoch soll der Film Bewertet sein?
   utter_ask_release:
-  - text: Soll es ein neuer Film sein oder darf er auch Älter sein?
+    - text: Soll es ein neuer Film sein oder darf er auch Älter sein?
   utter_movieform_fallback:
-  - text: Ich bin nicht sicher was du meinst.
+    - text: Ich bin nicht sicher was du meinst.
+  utter_test_what_title:
+    - text: Welchen Titel willst du suchen?
+  utter_test_what_year:
+    - text: In welchem Jahr willst du suchen?
 
 actions:
-- validate_moviefilter_form
+  - validate_moviefilter_form
+  - action_search_genre
 
 forms:
   moviefilter_form:
     required_slots:
-    - genre
-    - release
+      - genre
+      - release
